force-app/main/default/objects/SimulacaoParcela__c/SimulacaoParcela__c.object-meta.xml
<CustomObject>
    <description>Objeto filho de Simulação de crédito, onde as parcelas serão armazenadas como registros contendo valores de juros e amortização de cada uma.</description>
    <label>Simulação de parcela</label>
    <nameField>
        <displayFormat>SP-{000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Simulações de parcela</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>