force-app/main/default/objects/SimulacaoParcela__c/fields/Amortizacao__c.field-meta.xml
<CustomField>
    <fullName>Amortizacao__c</fullName>
    <label>Amortização</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>