force-app/main/default/objects/SimulacaoParcela__c/fields/SimulacaoCredito__c.field-meta.xml
<CustomField>
    <fullName>SimulacaoCredito__c</fullName>
    <label>Simulação de crédito</label>
    <referenceTo>SimulacaoCredito__c</referenceTo>
    <relationshipLabel>Simulações de parcela</relationshipLabel>
    <relationshipName>SimulacoesParcela</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>