force-app/main/default/objects/SimulacaoParcela__c/fields/ValorVencimento__c.field-meta.xml
<CustomField>
    <fullName>ValorVencimento__c</fullName>
    <label>Valor no vencimento</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>